@@ -1,0 +1,15 @@
+from Products.ATContentTypes.criteria import relativepath
+
+from collective.formcriteria.criteria import common
+
+class RelativePathFormCriterion(
+    common.FormCriterion, relativepath.ATRelativePathCriterion):
+    __doc__ = relativepath.ATRelativePathCriterion.__doc__
+
+    schema = relativepath.ATRelativePathCriterion.schema.copy(
+        ) + common.FormCriterion.schema.copy()
+    schema['formFields'].vocabulary = common.makeVocabularyForFields(
+        schema['relativePath'], schema['recurse'])
+
+common.replaceCriterionRegistration(
+    relativepath.ATRelativePathCriterion, RelativePathFormCriterion)
