@@ -21,6 +21,7 @@ def test_suite():
         'criteria/boolean.txt',
         'criteria/date.txt',
         'criteria/path.txt',
+        'criteria/relativepath.txt',
         optionflags=optionflags,
         test_class=ptc.FunctionalTestCase)
     suite.layer = testing.formcriteria_layer
