@@ -14,6 +14,7 @@ Changelog
 * Added boolean criteria
 * Added date criteria
 * Added path criteria
+* Added relative path criteria
 
 0.5 - 2009-01-25
 ----------------
